1、中断、异常和系统调用的上下文参数（struct context）用指针传递， 以避免编译器被优化，导致系统调用返回值被丢弃； 2、添加了几个系统调用，并测试了一下； 3、其他一些小错误的修改。

--- a/app/Makefile
+++ b/app/Makefile
@@ -17,13 +17,19 @@ PROG=	a
 all: $(PROG).exe
 
 CFLAGS=		-fno-builtin -ffreestanding -O #-Wall
-LDFLAGS=	-nostdlib -nostartfiles -Wl,-Map,$(PROG).map
+LDFLAGS=	-nostdlib -nostartfiles #-Wl,-Map,$(PROG).map
 
 OBJS=		crt0.o utils.o vsprintf.o main.o
 
 $(PROG).exe: $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
 	../../bin/winimage.exe /h ../image.flp  /i $@
+
+run:
+	$(MAKE) -C .. run
+
+debug:
+	$(MAKE) -C .. debug 
 
 vsprintf.o: ../vsprintf.c
 	$(CC) -c $(CFLAGS) $^
