1、增加了task_wait系统调用，初步测试通过； 2、winimage的试用期（30天）要到了，换成fat_imgen，经测试稳定可用。

--- a/bootsect/Makefile
+++ b/bootsect/Makefile
@@ -28,6 +28,13 @@ $(PROG).bin: $(OBJS)
 	$(CC) $(LDFLAGS) -o $(PROG).out $^ $(LIBS)
 	$(OBJCOPY) -S -O binary $(PROG).out $(PROG)
 	dd if=$(PROG) of=$@ bs=512 count=1
+	../../bin/fat_imgen.exe -m -s $@ -f ../image.flp
+
+run:
+	$(MAKE) -C .. run
+
+debug:
+	$(MAKE) -C .. debug 
 
 clean:
 	${RM} *.o $(PROG).out $(PROG) $(PROG).bin *.*~
