1、系统调用利用0x77号软中断； 2、改进了调度算法； 3、增加了系统调用号码的头文件； 4、修改了INIT_TASK_CONTEXT； 5、大量的格式修改。

--- a/app/Makefile
+++ b/app/Makefile
@@ -26,10 +26,13 @@ $(PROG).exe: $(OBJS)
 	../../bin/fat_imgen.exe -m -g -i $@ -f ../floppy.img
 
 run:
-	$(MAKE) -C .. run
+	$(MAKE) -C .. $@
 
 debug:
-	$(MAKE) -C .. debug 
+	$(MAKE) -C .. $@
+
+bochs:
+	$(MAKE) -C .. $@
 
 vsprintf.o: ../vsprintf.c
 	$(CC) -c $(CFLAGS) $^
