1、软盘空间太小，不能满足虚拟内存的要求，换成硬盘； 1、FAT文件系统的实现换成第三方的dosfs； 2、增加了page fault处理； 3、系统调用号码改成0x82，修改了参数传递方法； 4、用imgcpy代替fat_imgen和winimage； 5、把异常放在线程的现场中去处理； 6、增加键盘处理代码； 7、修改了SYSCALL_TASK_WAIT中的错误； 8、整理了代码格式，方便打印。

--- a/app/Makefile
+++ b/app/Makefile
@@ -14,25 +14,28 @@ NM=		$(CROSS)nm
 
 PROG=	a
 
-all: $(PROG).exe
+all: $(PROG).out
 
-CFLAGS=		-fno-builtin -ffreestanding -O #-Wall
-LDFLAGS=	-nostdlib -nostartfiles #-Wl,-Map,$(PROG).map
+CFLAGS=	-fno-builtin -ffreestanding -fno-stack-check \
+				-fno-stack-protector -mno-stack-arg-probe -O #-Wall
+LDFLAGS=	-nostdlib -nostartfiles -Wl,-Map,$(PROG).map
 
-OBJS=		crt0.o syscall.o utils.o vsprintf.o main.o
+OBJS=		crt0.o syscall.o utils.o vsprintf.o rand.o main.o tlsf.o
 
-$(PROG).exe: $(OBJS)
+$(PROG).out: $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
-	../../bin/fat_imgen.exe -m -g -i $@ -f ../floppy.img
+	../../bin/imgcpy.exe $@ ../hd.img=C:\$@
+#	../../bin/winimage.exe ..\hd.img /q /h /i $@
+#	../../bin/fat_imgen.exe -m -g -i $@ -f ../floppy.img
 
 run:
 	$(MAKE) -C .. $@
 
 debug:
-	$(MAKE) -C .. $@
+	$(MAKE) -C .. $@ 
 
 bochs:
-	$(MAKE) -C .. $@
+	$(MAKE) -C .. $@ 
 
 vsprintf.o: ../vsprintf.c
 	$(CC) -c $(CFLAGS) $^
@@ -40,5 +43,8 @@ vsprintf.o: ../vsprintf.c
 utils.o: ../utils.c
 	$(CC) -c $(CFLAGS) $^
 
+tlsf.o: ../tlsf/tlsf.c
+	$(CC) -c $(CFLAGS) $^
+
 clean:
-	-$(RM)  *.o *.out *.bin *.*~ $(PROG).exe $(PROG).map
+	-$(RM)  *.o *.out *.bin *.*~ #$(PROG).map
