1、把virtual 8086 monitor放到内核里面实现，并完善了指令支持； 2、用virtual 8086 mode实现了VBE文档中的例子；

--- a/app/Makefile
+++ b/app/Makefile
@@ -34,7 +34,7 @@ CFLAGS=	-fno-builtin -ffreestanding -fno-stack-check \
 	-mno-stack-arg-probe -O #-fno-stack-protector #-Wall
 LDFLAGS=-nostdlib -nostartfiles -Wl,-Map,$(PROG).map 
 
-OBJS=	crt0.o syscall.o utils.o vsprintf.o rand.o main.o tlsf.o
+OBJS=	crt0.o syscall.o utils.o vsprintf.o rand.o main.o tlsf.o vm86.o video.o
 
 $(PROG).out: $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
