1、vm86mon中的重要错误修改； 2、目前，在qemu中可以切换到图形模式并正常画图， 但是在bochs中只能切换到图形模式，不能画图；

--- a/app/Makefile
+++ b/app/Makefile
@@ -63,6 +63,10 @@ run: ../hd.img
 debug: ../hd.img
 	$(MAKE) -C .. $@ 
 
+.PHONY: qemu
+qemu: ../hd.img
+	$(MAKE) -C .. $@
+
 .PHONY: bochs
 bochs: ../hd.img
 	$(MAKE) -C .. $@ 
