1、硬盘镜像改成用bzip2压缩； 2、相应地更新Makefile，以自动生成硬盘镜像；

--- a/app/Makefile
+++ b/app/Makefile
@@ -39,36 +39,39 @@ OBJS=	crt0.o syscall.o utils.o vsprintf.o rand.o main.o tlsf.o vm86.o video.o
 $(PROG).out: $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
 
-../hd.img: a.out
+../hd.img:
+	$(MAKE) -C .. hd.img
+
+update: $(PROG).out ../hd.img
 ifeq ($(OS),Windows_NT)
-	../../bin/imgcpy.exe $^ $@=C:\$^
+	../../bin/imgcpy.exe $(PROG).out ../hd.img=C:\$(PROG).out
 else
 ifeq ($(shell uname -s),Linux)
-	sudo mount -o loop,offset=32256 -t vfat $@ /mnt
-	sudo cp $^ /mnt
+	sudo mount -o loop,offset=32256 -t vfat ../hd.img /mnt
+	sudo cp $(PROG).out /mnt
 	sudo umount /mnt
 endif
 ifeq ($(shell uname -s),Darwin)
-	hdiutil attach -imagekey diskimage-class=CRawDiskImage $@
-	cp $^ /Volumes/EPOSDISK
+	hdiutil attach -imagekey diskimage-class=CRawDiskImage ../hd.img
+	cp $(PROG).out /Volumes/EPOSDISK
 	hdiutil detach /Volumes/EPOSDISK
 endif
 endif
 
 .PHONY: run
-run: ../hd.img
+run: update
 	$(MAKE) -C .. $@
 
 .PHONY: debug
-debug: ../hd.img
+debug: update
 	$(MAKE) -C .. $@ 
 
 .PHONY: qemu
-qemu: ../hd.img
+qemu: update
 	$(MAKE) -C .. $@
 
 .PHONY: bochs
-bochs: ../hd.img
+bochs: update 
 	$(MAKE) -C .. $@ 
 
 vsprintf.o: ../vsprintf.c
