1、增加getchar系统调用，并不用这个作为第一个实验； 2、增加系统启动时间g_startup_time，准备把获取时间(time)作为第一个实验； 3、删除不必要的例子和代码，以免把学生搞糊涂了； 4、修改了task_create的系统调用的接口类型；

--- a/app/Makefile
+++ b/app/Makefile
@@ -34,7 +34,8 @@ CFLAGS=	-fno-builtin -ffreestanding -fno-stack-check \
 	-mno-stack-arg-probe -O #-fno-stack-protector #-Wall
 LDFLAGS=-nostdlib -nostartfiles -Wl,-Map,$(PROG).map 
 
-OBJS=	crt0.o syscall.o utils.o snprintf.o math.o main.o tlsf.o vm86.o video.o
+OBJS=	crt0.o syscall.o utils.o vm86.o tlsf.o \
+	snprintf.o math.o graphics.o main.o
 
 $(PROG).out: $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
@@ -81,3 +82,4 @@ tlsf.o: ../tlsf/tlsf.c
 .PHONY: clean
 clean:
 	-$(RM)  *.o *.out *.bin *.*~ $(PROG).map
+	$(MAKE) -C .. $@ 
