--- a/app/Makefile
+++ b/app/Makefile
@@ -34,8 +34,8 @@ CFLAGS=	-fno-builtin -ffreestanding -fno-stack-check \
 	-mno-stack-arg-probe -O #-fno-stack-protector #-Wall
 LDFLAGS=-nostdlib -nostartfiles -Wl,-Map,$(PROG).map 
 
-OBJS=	crt0.o syscall.o utils.o vm86.o tlsf.o \
-	snprintf.o math.o graphics.o main.o
+OBJS=	crt0.o syscallstub.o utils.o vm86.o tlsf.o \
+      snprintf.o math.o graphics.o main.o
 
 $(PROG).out: $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
