1、升级到Yosemite后，i386-mingw32-gcc不能用了，换成i586-mingw32-gcc； 2、终于找到一个隐藏了很久的错误，还是由于结构体字节对齐引起的问题；

--- a/app/Makefile
+++ b/app/Makefile
@@ -9,7 +9,7 @@ ifeq ($(shell uname -s),Linux)
 #CROSS=i486-mingw32-
 endif
 ifeq ($(shell uname -s),Darwin)
-CROSS=i386-mingw32-
+CROSS=i586-mingw32-
 endif
 endif
 
@@ -30,7 +30,7 @@ PROG=	a
 all: $(PROG).out
 
 CFLAGS=	-fno-builtin -ffreestanding -fno-stack-check \
-	-fleading-underscore \
+	-fleading-underscore -mno-ms-bitfields \
 	-mno-stack-arg-probe -O #-fno-stack-protector #-Wall
 LDFLAGS=-nostdlib -nostartfiles -Wl,-Map,$(PROG).map 
 
