把vga的代码从graphics中剥离出来
1、graphics中只放图形学相关的代码；
2、找到setPixel中一个很隐蔽的错误；
3、现在的setPixel只支持24和32位bpp；

--- a/userapp/Makefile
+++ b/userapp/Makefile
@@ -13,7 +13,7 @@ CFLAGS=	 -nostdinc -I../include -Iinclude -fno-builtin \
 LDFLAGS=-nostdlib -nostartfiles -Wl,-Map,$(PROG).map
 
 OBJS=	lib/crt0.o
-OBJS+=	vm86call.o graphics.o main.o
+OBJS+=	vm86call.o vga.o graphics.o main.o
 OBJS+=	lib/math.o lib/stdio.o lib/stdlib.o lib/syscall-wrapper.o
 OBJS+=	../lib/div.o ../lib/string.o \
 		../lib/snprintf.o ../lib/tlsf/tlsf.o
