--- a/userapp/Makefile
+++ b/userapp/Makefile
@@ -14,7 +14,8 @@ LDFLAGS=-nostdlib -nostartfiles -Wl,-Map,$(PROG).map
 
 OBJS=	lib/crt0.o
 OBJS+=	vm86call.o vga.o graphics.o main.o
-OBJS+=	lib/math.o lib/stdio.o lib/stdlib.o lib/syscall-wrapper.o
+OBJS+=	lib/sysconf.o lib/math.o lib/stdio.o lib/stdlib.o \
+		lib/syscall-wrapper.o
 OBJS+=	../lib/div.o ../lib/string.o ../lib/memcpy.o \
 		../lib/memset.o ../lib/snprintf.o ../lib/tlsf/tlsf.o
 
