1. Now can be compiled in x86_64 Linux

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,14 +5,14 @@ PROG=		eposkrnl
 .PHONY: all
 all: $(PROG).bin
 
-ASFLAGS=-nostdinc -I../include
-CFLAGS=	-DUSE_FLOPPY=0 -DVERBOSE=0 -nostdinc -I../include \
+ASFLAGS=-m32 -nostdinc -I../include
+CFLAGS=	-m32 -DUSE_FLOPPY=0 -DVERBOSE=0 -nostdinc -I../include \
 	-O -fomit-frame-pointer -fno-builtin \
 	-ffreestanding -mno-stack-arg-probe \
 	-mno-ms-bitfields -fleading-underscore \
 	-fno-stack-check #-fno-stack-protector #-Wall
 
-LDFLAGS=-Tldscript -nostdlib -nostartfiles -Wl,-Map,$(PROG).map
+LDFLAGS=-m32 -Tldscript -nostdlib -nostartfiles -Wl,-Map,$(PROG).map
 
 OBJS=	entry.o ide.o floppy.o e1000.o pci.o vm86.o \
 	kbd.o timer.o machdep.o task.o mktime.o sem.o \
