1. The kernel can now load a.out of ELF or PE.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -17,14 +17,17 @@ LDFLAGS=-m32 -Tldscript -nostdlib -nostartfiles -Wl,-Map,$(PROG).map
 OBJS=	entry.o ide.o floppy.o e1000.o pci.o vm86.o \
 	kbd.o timer.o machdep.o task.o mktime.o sem.o \
 	page.o startup.o frame.o kmalloc.o dosfs.o pe.o \
-	printk.o bitmap.o
+	elf.o printk.o bitmap.o
 OBJS+=	../lib/div.o ../lib/string.o ../lib/memcpy.o \
 		../lib/memset.o ../lib/snprintf.o ../lib/tlsf/tlsf.o
 
-$(PROG).bin: $(OBJS)
-	$(CC) $(LDFLAGS) -o $(PROG).out $^ $(LIBS)
+$(PROG).bin: ldscript $(OBJS)
+	$(CC) $(LDFLAGS) -o $(PROG).out $(OBJS) $(LIBS)
 	$(OBJCOPY) -S -O binary $(PROG).out $@
+
+ldscript: ldscript.in
+	$(CC) -E -P -x c-header -o $@ $^
 
 .PHONY: clean
 clean:
-	-$(RM) $(OBJS) $(PROG).bin $(PROG).out $(PROG).map *.*~
+	-$(RM) ldscript $(OBJS) $(PROG).bin $(PROG).out $(PROG).map *.*~
