1、把内核搬回到3GiB+1MiB处，折腾回到了最开始的布局； 2、把vm86的初始化搬到task0中进行，这倒是一个真正的改进；

--- a/kernel/ldscript.in
+++ b/kernel/ldscript.in
@@ -17,6 +17,7 @@
  * purpose.
  *
  */
+#define LOADADDR 0x100000
 #define KERNBASE 0xC0000000
 
 #if defined __WIN32__
@@ -28,7 +29,7 @@ OUTPUT_FORMAT("elf32-i386")
 #endif
 ENTRY(_entry)
 SECTIONS {
-  . = KERNBASE;
+  . = KERNBASE+LOADADDR;
   .text : {
     *(.text)
   }
