更改编译和运行的选项
1、有些系统上面（如Linux），qemu不支持pcspk；
2、编译汇编代码时，加入宏定义__ASSEMBLY__；
3、打开所有的警告-Wall；
4、加入函数init_memory_pool的声明

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,8 +5,9 @@ PROG=		eposkrnl
 .PHONY: all
 all: run
 
-ASFLAGS=-m32 -nostdinc -I../include
-CFLAGS=	$(ASFLAGS) -DUSE_FLOPPY=0 -DVERBOSE=0 \
+CPPFLAGS=-DUSE_FLOPPY=0 -DVERBOSE=0 -nostdinc -I../include
+ASFLAGS=-m32 -Wall -D__ASSEMBLY__
+CFLAGS=	-m32 -Wall \
 	-fomit-frame-pointer \
 	-fno-builtin -ffreestanding -fno-stack-check -fleading-underscore \
 	-mno-ms-bitfields -mno-stack-arg-probe
