移植到树莓派的初始版本
1、虚拟内存已经布局好了；
2、定时器已经初始化，并可以发出中断；
3、串口已经初始化，可以用于打印输出；

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,41 +1,34 @@
 include ../Makefile.inc
 
-PROG=		eposkrnl
+PROG=		kernel
 
-CPPFLAGS=-DUSE_FLOPPY=0 -DVERBOSE=0 -nostdinc -I../include
-ASFLAGS=-m32 -Wall -D__ASSEMBLY__
-CFLAGS=	-m32 -Wall \
+CPPFLAGS+=-DVERBOSE=1 -nostdinc -I../include
+ASFLAGS=-Wall -D__ASSEMBLY__
+CFLAGS+=-O2 -Wall \
 	-fomit-frame-pointer \
-	-ffreestanding -fno-stack-check -fleading-underscore \
-	-mno-ms-bitfields -mno-stack-arg-probe
-LDFLAGS=-m32 -Tldscript -nostdlib -nostartfiles -nodefaultlibs \
+	-ffreestanding -fno-stack-check -fleading-underscore
+LDFLAGS+=-Tldscript -nostdlib -nostartfiles -nodefaultlibs \
 		-Wl,-Map,$(PROG).map
 
-OBJS=	entry.o ide.o floppy.o e1000.o pci.o vm86.o \
-	kbd.o timer.o machdep.o task.o mktime.o sem.o \
-	page.o startup.o frame.o kmalloc.o dosfs.o pe.o \
-	elf.o printk.o bitmap.o
-OBJS+=	../lib/softfloat.o ../lib/string.o ../lib/memcpy.o \
-		../lib/memset.o ../lib/snprintf.o ../lib/tlsf/tlsf.o
+OBJS=	entry.o \
+	timer.o machdep.o task.o \
+	startup.o kmalloc.o page.o frame.o bitmap.o \
+	printk.o 
+OBJS+= ../lib/string.o ../lib/memcpy.o \
+		../lib/memset.o  ../lib/tlsf/tlsf.o ../lib/snprintf.o ../lib/softfloat.o
 
 .PHONY: all
-all: run
+all: $(PROG).img
 
-$(PROG).bin: ldscript $(OBJS)
-	$(CC) $(LDFLAGS) -o $(PROG).out $(OBJS) $(LIBS)
-	$(OBJCOPY) -S -O binary $(PROG).out $@
+$(PROG).img: $(PROG).elf
+	$(OBJCOPY) $^ -O binary $@
+
+$(PROG).elf: ldscript $(OBJS)
+	$(CC) $(LDFLAGS) $(OBJS) -o $@
 
 ldscript: ldscript.in
 	$(CC) -E -P -x c-header -o $@ $^
-
-.PHONY: debug
-debug: CFLAGS+=-O0 -ggdb
-debug: $(PROG).bin
-
-.PHONY: run
-run: CFLAGS+=-O2 -ggdb
-run: $(PROG).bin
-
+	
 .PHONY: clean
 clean:
-	-$(RM) ldscript $(OBJS) $(PROG).bin $(PROG).out $(PROG).map *.*~
+	-$(RM) ldscript $(OBJS) $(PROG).img $(PROG).elf $(PROG).map *.*~
