加入头文件依赖

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -3,7 +3,7 @@ include ../Makefile.inc
 PROG=		eposkrnl
 
 .PHONY: all
-all: run
+all: make.dep run
 
 CPPFLAGS=-DUSE_FLOPPY=0 -DVERBOSE=0 -nostdinc -I../include
 ASFLAGS=-m32 -Wall -D__ASSEMBLY__
@@ -14,16 +14,19 @@ CFLAGS=	-m32 -Wall \
 LDFLAGS=-m32 -Tldscript -nostdlib -nostartfiles -nodefaultlibs \
 		-Wl,-Map,$(PROG).map
 
-OBJS=	entry.o ide.o floppy.o e1000.o pci.o vm86.o \
+COBJS=	ide.o floppy.o e1000.o pci.o vm86.o \
 	kbd.o timer.o machdep.o task.o mktime.o sem.o \
 	page.o startup.o frame.o kmalloc.o dosfs.o pe.o \
 	elf.o printk.o bitmap.o
-OBJS+=	../lib/softfloat.o ../lib/string.o ../lib/memcpy.o \
+COBJS+=	../lib/softfloat.o ../lib/string.o ../lib/memcpy.o \
 		../lib/memset.o ../lib/snprintf.o ../lib/tlsf/tlsf.o
 
-../lib/snprintf.o:   .FORCE
-.PHONY: .FORCE
-.FORCE:
+OBJS=	entry.o $(COBJS)
+
+make.dep: *.c *.h
+	$(CC) $(CPPFLAGS) -M $(COBJS:.o=.c) >make.dep
+
+.DELETE_ON_ERROR: make.dep
 
 $(PROG).bin: ldscript $(OBJS)
 	$(CC) $(LDFLAGS) -o $(PROG).out $(OBJS) $(LIBS)
@@ -42,4 +45,6 @@ run: $(PROG).bin
 
 .PHONY: clean
 clean:
-	-$(RM) ldscript $(OBJS) $(PROG).bin $(PROG).out $(PROG).map *.*~
+	-$(RM) ldscript $(OBJS) $(PROG).bin $(PROG).out $(PROG).map make.dep *.*~
+
+-include make.dep
