--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -30,7 +30,12 @@ make.dep: *.c *.h
 .FORCE:
 .PHONY: .FORCE
 
+../lib/tlsf/tlsf.o: .FORCE
+../lib/memcpy.o: .FORCE
+../lib/memset.o: .FORCE
 ../lib/snprintf.o: .FORCE
+../lib/softfloat.o: .FORCE
+../lib/string.o: .FORCE
 
 $(PROG).bin: kernel.ld $(OBJS)
 	$(CC) $(LDFLAGS) -o $(PROG).out $(OBJS) $(LIBS)
